--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <div id="qr-reader"></div>
     <div id="qr-result"></div>
 
-    <!-- Fallback button -->
-    <button id="fallback-btn">Open Menu Manually</button>
+<!-- Fallback button -->
+<a href="menu.html">
+  <button>Open Menu Manually</button>
+</a>
+
   </div>
 
   <!-- Correct CDN for html5-qrcode -->
